force-app/main/default/objects/Account/fields/Address_Countries__c.field-meta.xml
<CustomField>
    <fullName>Address_Countries__c</fullName>
    <description>This field stores all the unique values of full names of the Countries referenced in the Account Address records, separated by semicolon. E.g, if an account has addresses in Germany and Russia, this field should look like “Germany;Russia;”.</description>
    <label>Address Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>