force-app/main/default/objects/Account/fields/Address_States__c.field-meta.xml
<CustomField>
    <fullName>Address_States__c</fullName>
    <description>This field stores all the unique values of abbreviations of States/Provinces referenced in the Account Address records, separated by semicolon. E.g, if an account has addresses in California and Nevada, this field should look like “CA;NV;”.</description>
    <label>Address States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>