force-app/main/default/objects/Account/fields/Channel_Region__c.field-meta.xml
<CustomField>
    <fullName>Channel_Region__c</fullName>
    <description>A default Region set by the Channel Country picklist.</description>
    <inlineHelpText>A default Region set by the Channel Country picklist.</inlineHelpText>
    <label>Channel Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>EEMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>NA/LA</fullName>
            </value>
            <value>
                <fullName>AP (Australia - New Zealand)</fullName>
            </value>
            <value>
                <fullName>AP (Japan - Korea)</fullName>
            </value>
            <value>
                <fullName>EMEA (incl. Russia and CIS)</fullName>
            </value>
            <value>
                <fullName>Greater China (PRC- Hong Kong-Taiwan)</fullName>
            </value>
            <value>
                <fullName>Latin America (incl. Mexico)</fullName>
            </value>
            <value>
                <fullName>Multiple Regions</fullName>
            </value>
            <value>
                <fullName>North America (US and Canada)</fullName>
            </value>
            <value>
                <fullName>South Asia (India- Bangladesh-Pakistan-Sri Lanka)</fullName>
            </value>
            <value>
                <fullName>Southeast Asia (Indon-Bru-Mal-Phil-Viet-Thai-Sing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>