force-app/main/default/objects/Account/fields/Channel_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Channel_Sub_Region__c</fullName>
    <description>A default Sub-Region set by the Channel Country picklist.</description>
    <inlineHelpText>A default Sub-Region set by the Channel Country picklist.</inlineHelpText>
    <label>Channel Sub-Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>LatAm</fullName>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
            <value>
                <fullName>Mongolia</fullName>
            </value>
            <value>
                <fullName>N Korea</fullName>
            </value>
            <value>
                <fullName>Russia/CIS</fullName>
            </value>
            <value>
                <fullName>SE Asia</fullName>
            </value>
            <value>
                <fullName>S Korea</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>Sub Sahara</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>