force-app/main/default/objects/Account/fields/City_Translated__c.field-meta.xml
<CustomField>
    <fullName>City_Translated__c</fullName>
    <description>Main City field translated to English</description>
    <inlineHelpText>Disclaimer: This text has been translated by AI. Minor differences from the original may be present, but the overall intent and meaning remain unchanged.</inlineHelpText>
    <label>City (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>