force-app/main/default/objects/Account/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PDX Field</description>
    <label>Corporate Account</label>
    <type>Checkbox</type>
</CustomField>