force-app/main/default/objects/Account/fields/Current_Quota_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Quota_Target__c</fullName>
    <label>Current Quota Target</label>
    <summarizedField>Partner_Performance__c.Yearly_Target__c</summarizedField>
    <summaryFilterItems>
        <field>Partner_Performance__c.Date__c</field>
        <operation>equals</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Performance__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>