force-app/main/default/objects/Account/fields/D_B_Record__c.field-meta.xml
<CustomField>
    <fullName>D_B_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Places the D&amp;B Record at the top of the Account hierarchy. 1 D&amp;B record can have many Accounts</description>
    <inlineHelpText>https://www.dnb.com/duns-number/lookup.html</inlineHelpText>
    <label>D&amp;B Record</label>
    <referenceTo>DB_Data__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>