force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>For Channel Partners, this is set by the Securimate integration - changes should be made in the Securimate system.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDG - Clinical Diagnostic Division (CDD)</fullName>
            </value>
            <value>
                <fullName>SDG - ImmunoDiagnostics Division (IDD)</fullName>
            </value>
            <value>
                <fullName>SDG - Microbiology Division (MBD)</fullName>
            </value>
            <value>
                <fullName>SDG - Transplant Diagnostics Division (TDX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>