force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>CDD ERP Reference Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>