force-app/main/default/objects/Account/fields/Friendly_account_name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_account_name__c</fullName>
    <label>Friendly account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>