force-app/main/default/objects/Account/fields/MBD_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>MBD_Account_Type__c</fullName>
    <defaultValue>IF( $User.Division =&apos;MBD&apos;,&apos;Prospect&apos;,&apos;&apos;)</defaultValue>
    <inlineHelpText>Type of account for MBD (Read Only)</inlineHelpText>
    <label>MBD Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>