force-app/main/default/objects/Account/fields/MBD_Status__c.field-meta.xml
<CustomField>
    <fullName>MBD_Status__c</fullName>
    <defaultValue>IF($User.Division =&apos;MBD&apos;,&apos;Active&apos;,&apos;&apos;)</defaultValue>
    <label>MBD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Abolished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>