force-app/main/default/objects/Account/fields/Normalized_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Account_Name__c</fullName>
    <description>System-maintained canonical Account name used to prevent exact duplicates across UI, API, and imports.</description>
    <label>Normalized Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>