force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>[Updated by AI] Stores the account&apos;s business region for territory views, reporting, and operational filtering.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>