force-app/main/default/objects/Account/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <description>[Updated by AI] Free-text field to capture the sales rep name associated with the account when not using owner-based assignment.</description>
    <label>Sales Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>