force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <description>[Updated by AI] Formula-derived segmentation from D&amp;B record segment; used to classify account market segment.</description>
    <formula>if(D_B_Record__c != null,  D_B_Record__r.Segment__c ,&apos;not available via D&amp;B&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmentation</label>
    <type>Text</type>
</CustomField>