force-app/main/default/objects/Account/fields/SVMX_Account_Category__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Account_Category__c</fullName>
    <description>[Updated by AI] Categorizes account type for ServiceMax and operational processing; picklist values should be maintained by business owners.</description>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>