force-app/main/default/objects/Account/fields/SVMX_ERP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_ERP_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[Updated by AI] Unique external ERP account identifier used for integrations, matching, and account lookup/search.</description>
    <externalId>true</externalId>
    <label>ERP Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>