force-app/main/default/objects/Account/fields/SVMX_ERP_Source__c.field-meta.xml
<CustomField>
    <fullName>SVMX_ERP_Source__c</fullName>
    <description>Used to identify the source of data being created/updated by integration</description>
    <label>ERP Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>