force-app/main/default/objects/Account/fields/SVMX_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Sales_Organization__c</fullName>
    <description>[Updated by AI] Stores ERP sales organization code for account filtering, territory segmentation, and integration routing.</description>
    <label>Sales Organization</label>
    <length>10</length>
    <type>Text</type>
</CustomField>