force-app/main/default/objects/Account/fields/SVMX_Ship_To_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Ship_To_ID__c</fullName>
    <description>[Updated by AI] ERP Ship-To identifier used to map delivery destination accounts in downstream systems.</description>
    <label>Ship-To ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>