force-app/main/default/objects/Account/fields/SVMX_Sold_To_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Sold_To_ID__c</fullName>
    <description>[Updated by AI] ERP Sold-To identifier used to map billing/customer entity relationships for order and service transactions.</description>
    <label>Sold-To ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>