force-app/main/default/objects/Account/fields/SVMXC__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Do Not Use)</description>
    <inlineHelpText>(Do Not Use)</inlineHelpText>
    <label>Business Hours (Do Not Use)</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>