force-app/main/default/objects/Account/fields/SVMXC__Latitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Latitude__c</fullName>
    <description>Address location north or south of the equator.</description>
    <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>