force-app/main/default/objects/Account/fields/SVMXC__Longitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Longitude__c</fullName>
    <description>East west geographic coordinate measurement.</description>
    <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>