force-app/main/default/objects/Account/fields/SVMXC__Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Preferred_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>