force-app/main/default/objects/Account/fields/TDX_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>TDX_Distribution_Channel__c</fullName>
    <label>TDX Distribution Channel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>