force-app/main/default/objects/Account/fields/Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Name__c</fullName>
    <description>Main Name field translated to English</description>
    <inlineHelpText>Disclaimer: This text has been translated by AI. Minor differences from the original may be present, but the overall intent and meaning remain unchanged.</inlineHelpText>
    <label>Name (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>